--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Leopard 2A7HU.</title>
 </head>
 <body>
     
